@@ -54,6 +54,10 @@
 <p>2011-04-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/jpeg.c (ReadIPTCProfile): JPEG may deliver IPTC profile
+in chunks but code was only allowing one chunk, even though it was
+otherwise prepared to concatenate chunks.  Fixes SourceForge bug
+2978422 &quot;Clipping paths in JPG images are truncated&quot;.</li>
 <li>magick/utility.c (GetToken): Fix case where parser may run off
 end of string.  Also add asserts to check for passing null
 pointer.</li>
@@ -212,7 +216,7 @@ string, even if it is assured to fit.</li>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2011-04-21 18:42 UTC.
+Generated on: 2011-04-21 19:11 UTC.
 
 </div>
 </body>
